# PD_7_HW_27

./: db.sqlite3  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
avito/: settings.py  urls.py
data/: csv_to_json.py
